vlib/v/checker/tests/mod_op_wrong_right_type_err_d.vv
fn main() {
	a := map[string]int
	println(1 % a)
}
